@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -60,7 +61,7 @@ public class UsersServiceImpl implements UsersService {
                 user.getEmail(),
                 user.getRoles().stream().map(
                         String::valueOf
-                ).toList()
+                ).collect(Collectors.toList())
         );
     }
 }
